[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "email-triage-rl"
version = "1.0.0"
description = "Smart Email Triage RL Environment"
requires-python = ">=3.11"
dependencies = [
    "gradio==5.23.3",
    "openai>=1.0.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
    "openenv-core>=0.2.0",
]

[project.scripts]
server = "app:app"

[tool.setuptools.packages.find]
where = ["."]
